force-app/main/default/objects/Email_Alert_Settings__mdt/Email_Alert_Settings__mdt.object-meta.xml
<CustomObject>
    <description>CMT to store settings for email alerts</description>
    <label>Email Alert Setting</label>
    <pluralLabel>Email Alert Settings</pluralLabel>
</CustomObject>