force-app/main/default/objects/Email_Alert_Settings__mdt/fields/Additional_Recipient_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recipient_Email_Addresses__c</fullName>
    <description>Field to store the comma-separated list of additional recipient email addresses</description>
    <inlineHelpText>Field to store the comma-separated list of additional recipient email addresses</inlineHelpText>
    <label>Additional Recipient Email Addresses</label>
    <type>TextArea</type>
</CustomField>