force-app/main/default/objects/Email_Alert_Settings__mdt/fields/Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_API_Name__c</fullName>
    <description>Field to store email template API name.</description>
    <inlineHelpText>Field to store email template API name.</inlineHelpText>
    <label>Email Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>