force-app/main/default/objects/Email_Alert_Settings__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if alert is active</description>
    <inlineHelpText>True if alert is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>