force-app/main/default/objects/Email_Alert_Settings__mdt/fields/Project_Recipient_Fields__c.field-meta.xml
<CustomField>
    <fullName>Project_Recipient_Fields__c</fullName>
    <description>Field to store the comma-separated list of users lookup on the related project which will be a recipient for email alerts</description>
    <inlineHelpText>Field to store the comma-separated list of users lookup on the related project which will be a recipient for email alerts</inlineHelpText>
    <label>Project Recipient Fields</label>
    <type>TextArea</type>
</CustomField>