force-app/main/default/objects/Email_Alert_Settings__mdt/fields/Reminder_Alert_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Alert_Days__c</fullName>
    <description>Field to store reminder alert days when email alerts should go out</description>
    <inlineHelpText>Field to store reminder alert days when email alerts should go out</inlineHelpText>
    <label>Reminder Alert Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>